# Qwen_3_6_on_A10_vLLM

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.moe.tp2.yaml  docker-compose.moe.yaml  docker-compose.tp2.yaml  docker-compose.yaml  litellm_callbacks.py  litellm_config.moe.yaml  litellm_config.yaml  opencode-qwen-moe.json  opencode-qwen.json  pyproject.toml  requirements-test.txt
scripts/: coding_session_bench.py  pcie_bw_bench.py
searxng/: settings.yml
tests/: conftest.py
tests/gpu/: test_pcie.py
tests/integration/: probe_compaction.py  test_compaction_probe.py  test_lifecycle.py  test_openwebui_models.py  test_proxy_endpoints.py  test_websearch.py
tests/unit/: test_callbacks_lifecycle.py  test_callbacks_pure.py  test_client_bin.py  test_config_consistency.py  test_probe_compaction.py  test_scripts.py
